# differences-between-two-images

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml  requirements.txt  settings.toml
.github/workflows/: code-quality.yml
actions/: .github-ci.yml
differences_between_two_images/: __init__.py  main.py
differences_between_two_images/helpers/: exceptions.py  utils.py
env/Lib/: orig-prefix.txt
env/Scripts/: activate  activate.bat  activate.xsh
